--- a/node99.html
+++ b/node99.html
@@ -111,23 +111,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2791"
   HREF="node99.html#SECTION06230040000000000000">Should display index with posts: green</A>
 <LI><A NAME="tex2html2792"
-  HREF="node99.html#SECTION06230050000000000000">Expect vars.posts equall <P><!-- MATH
- \begin{displaymath}
-\end{displaymath}
- -->
-</P>
-<DIV ALIGN="CENTER" CLASS="mathdisplay">
-
-</DIV><P></P>: red</A>
+  HREF="node99.html#SECTION06230050000000000000">Expect vars posts equal empty array: red</A>
 <LI><A NAME="tex2html2793"
-  HREF="node99.html#SECTION06230060000000000000">Expect vars.posts equall <P><!-- MATH
- \begin{displaymath}
-\end{displaymath}
- -->
-</P>
-<DIV ALIGN="CENTER" CLASS="mathdisplay">
-
-</DIV><P></P>: green</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty arraempty arrayreen</A>
 <LI><A NAME="tex2html2794"
   HREF="node99.html#SECTION06230070000000000000">Should display the add post page: red</A>
 <LI><A NAME="tex2html2795"
@@ -349,14 +335,7 @@ Y ahora las pruebas pasan:
 <P>
 
 <H4><A NAME="SECTION06230050000000000000">
-Expect vars.posts equall <P><!-- MATH
- \begin{displaymath}
-\end{displaymath}
- -->
-</P>
-<DIV ALIGN="CENTER" CLASS="mathdisplay">
-
-</DIV><P></P>: red</A>
+Expect vars posts equal empty array: red</A>
 </H4>
   
 
@@ -411,14 +390,7 @@ Now the tests fail:
 <P>
 
 <H4><A NAME="SECTION06230060000000000000">
-Expect vars.posts equall <P><!-- MATH
- \begin{displaymath}
-\end{displaymath}
- -->
-</P>
-<DIV ALIGN="CENTER" CLASS="mathdisplay">
-
-</DIV><P></P>: green</A>
+Expect vars posts equal empty arraempty arrayreen</A>
 </H4>
   
 
