--- a/node99.html
+++ b/node99.html
@@ -113,7 +113,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2792"
   HREF="node99.html#SECTION06230050000000000000">Expect vars posts equal empty array: red</A>
 <LI><A NAME="tex2html2793"
-  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty arraempty arrayreen</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: green</A>
 <LI><A NAME="tex2html2794"
   HREF="node99.html#SECTION06230070000000000000">Should display the add post page: red</A>
 <LI><A NAME="tex2html2795"
@@ -390,7 +390,7 @@ Now the tests fail:
 <P>
 
 <H4><A NAME="SECTION06230060000000000000">
-Expect vars posts equal empty arraempty arrayreen</A>
+Expect vars posts equal empty array: green</A>
 </H4>
   
 
