--- a/node96.html
+++ b/node96.html
@@ -158,7 +158,7 @@ James carr blog and updated 2015:
 <LI><A NAME="tex2html2727"
   HREF="node99.html#SECTION06230050000000000000">Expect vars posts equal empty array: red</A>
 <LI><A NAME="tex2html2728"
-  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty arraempty arrayreen</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: green</A>
 <LI><A NAME="tex2html2729"
   HREF="node99.html#SECTION06230070000000000000">Should display the add post page: red</A>
 <LI><A NAME="tex2html2730"
