--- a/node96.html
+++ b/node96.html
@@ -172,7 +172,7 @@ James carr blog and updated 2015:
 <LI><A NAME="tex2html2734"
   HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
 <LI><A NAME="tex2html2735"
-  HREF="node99.html#SECTION062300130000000000000">Should display the add post page: green</A>
+  HREF="node99.html#SECTION062300130000000000000">Should display the add post page: (true) green</A>
 <LI><A NAME="tex2html2736"
   HREF="node99.html#SECTION062300140000000000000">views/index.jade</A>
 <LI><A NAME="tex2html2737"
