--- a/node99.html
+++ b/node99.html
@@ -127,7 +127,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2799"
   HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
 <LI><A NAME="tex2html2800"
-  HREF="node99.html#SECTION062300130000000000000">Should display the add post page: green</A>
+  HREF="node99.html#SECTION062300130000000000000">Should display the add post page: (true) green</A>
 <LI><A NAME="tex2html2801"
   HREF="node99.html#SECTION062300140000000000000">views/index.jade</A>
 <LI><A NAME="tex2html2802"
@@ -685,7 +685,7 @@ html
 <P>
 
 <H4><A NAME="SECTION062300130000000000000">
-Should display the add post page: green</A>
+Should display the add post page: (true) green</A>
 </H4>
   
 
