--- a/node99.html
+++ b/node99.html
@@ -224,9 +224,12 @@ para ejecutarla debemos hacer:
 Que indica que debemos usar el <code>module</code>(s) para compilar los ficheros
 con extensión <code>ext</code>.
 </LI>
-<LI>La opción <code>-R</code> o bien <code>--reporter</code> va segida de un <code>&lt;name&gt;</code>
+<LI>La opción <code>-R</code> o bien <code>--reporter</code> va seguida de un <code>&lt;name&gt;</code>
 y especifica el 
 <FONT COLOR="#ff0000"> reporter</FONT> a utilizar.
+</LI>
+<LI>This flag <code>-R</code> may also be used to utilize third-party reporters. For example if you npm install <code>mocha-lcov-reporter</code> 
+you may then do <code>--reporter mocha-lcov-reporter</code>.
 </LI>
 <LI>La  opción <code>--reporters</code> nos da la lista de <code>reporters</code> que 
 podemos utilizar:
