--- a/node99.html
+++ b/node99.html
@@ -228,7 +228,8 @@ con extensión <code>ext</code>.
 y especifica el 
 <FONT COLOR="#ff0000"> reporter</FONT> a utilizar.
 </LI>
-<LI>This flag <code>-R</code> may also be used to utilize third-party reporters. For example if you npm install <code>mocha-lcov-reporter</code> 
+<LI>This flag <code>-R</code> may also be used to utilize third-party reporters. For example if you 
+<code>npm install mocha-lcov-reporter</code> 
 you may then do <code>--reporter mocha-lcov-reporter</code>.
 </LI>
 <LI>La  opción <code>--reporters</code> nos da la lista de <code>reporters</code> que 
