--- a/node99.html
+++ b/node99.html
@@ -225,7 +225,11 @@ Que indica que debemos usar el <code>module</code>(s) para compilar los ficheros
 con extensión <code>ext</code>.
 </LI>
 <LI><A NAME="tex2html410"
-  HREF="http://stackoverflow.com/questions/20049790/how-to-pass-compiler-options-to-mocha">how to pass compiler options to mocha?</A>
+  HREF="http://stackoverflow.com/questions/20049790/how-to-pass-compiler-options-to-mocha">how to pass compiler options to mocha?</A>:
+
+<P>
+Write a script which activates the compiler with your options, 
+then use mocha's <code>--require</code> option to activate your registration script.
 </LI>
 <LI>La opción <code>-R</code> o bien <code>--reporter</code> va seguida de un <code>&lt;name&gt;</code>
 y especifica el 
