--- a/node99.html
+++ b/node99.html
@@ -309,7 +309,7 @@ is equal to what we expect to be passed in.
 <LI><A NAME="tex2html411"
   HREF="http://expressjs.com/api.html#res">Response objects</A>
 have a method <code>res.render(view [, locals] [, callback])</code>
-which rEnders a view and sends the rendered HTML string to the client. 
+which Renders a view and sends the rendered HTML string to the client. 
 
 <P>
 Optional parameters:
