--- a/node99.html
+++ b/node99.html
@@ -312,7 +312,7 @@ have a method <code>res.render(view [, locals] [, callback])</code>
 which Renders a view and sends the rendered HTML string to the client. 
 
 <P>
-Optional parameters:
+Optional parameters of <code>res.render</code>:
   
 <UL>
 <LI><code>locals</code>, an object whose properties define local variables for the view.
