--- a/node99.html
+++ b/node99.html
@@ -346,7 +346,7 @@ is equal to what we expect to be passed in.
 <LI><A NAME="tex2html411"
   HREF="http://expressjs.com/api.html#res">Response objects</A>
 have a method <code>res.render(view [, locals] [, callback])</code>
-which Renders the file whose name is given by <code>view</code> and sends the rendered HTML string to the client. 
+which renders the file whose name is given by <code>view</code> and sends the rendered HTML string to the client. 
 
 <P>
 Optional parameters of <code>res.render</code>:
