--- a/node99.html
+++ b/node99.html
@@ -295,7 +295,8 @@ de un método que procesa esa ruta. Así:
 <LI>etc.
 </LI>
 </UL>
-Esta correspondencia entre rutas y métodos se establece en 
+Esta correspondencia entre métodos HHTP+rutas y métodos del objeto <code>routes</code> 
+se establece en 
 el cuerpo principal de la aplicación:
 <PRE>
 [~/javascript/expressjs/coffee-mongo(master)]$ sed -ne '3p' app.coffee 
