--- a/node99.html
+++ b/node99.html
@@ -749,21 +749,23 @@ views/add_post.jade</A>
 Ademas tenemos que añadir la vista  <code>add_post</code>:
 <PRE>
 [~/src/coffee/coffeepress(master)]$ cat views/add_post.jade 
-form(method="post", action="/post/new")
-  fieldset
-    legend=title
-    .clearfix
-      label(for="title") Title
-      .input
-        input.xlarge#title(type="text", name="post[title]")
-    .clearfix
-      label(for="post") Post
-      .input
-        textarea#post.xxlarge(name="post[body]",rows="3")
-    .actions
-      input.btn.primary(type="submit", value="Publish!")
-      |   
-      a.btn(href="/") Cancel
+extends layout
+block content
+  form(method="post", action="/post/new")
+    fieldset
+      legend=title
+      .clearfix
+        label(for="title") Title
+        .input
+          input.xlarge#title(type="text", name="post[title]")
+      .clearfix
+        label(for="post") Post
+        .input
+          textarea#post.xxlarge(name="post[body]",rows="3")
+      .actions
+        input.btn.primary(type="submit", value="Publish!")
+        |   
+        a.btn(href="/") Cancel
 </PRE>
 
 <UL>
@@ -794,14 +796,14 @@ views/layout.jade</A>
 <P>
 Necesitamos también un <code>layout</code>:
 <PRE>
-[~/src/coffee/coffeepress(master)]$ cat views/layout.jade 
+~/src/coffee/coffeepress(master)]$ cat views/layout.jade 
 doctype html
 html
   head
     title= title
-    link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
-    script(src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
+    //link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
+    //script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
+    //script(src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
     style(type="text/css")
       #content { padding-top: 60px;}
   body
@@ -812,7 +814,8 @@ html
             h3: a(href="/") My Coffeepress Blog
             ul.nav
               li: a(href="/post/new") New Post
-    #content.container!=body
+              #content.container
+                block content
 </PRE>
 
 <P>
@@ -848,11 +851,13 @@ views/index.jade</A>
 Completemos la vista <code>index</code>:
 <PRE>
 [~/src/coffee/coffeepress(master)]$ cat views/index.jade 
-- each post in posts
-  .page-header
-    h1
-      a(href="/post/#{post.id}")= post.title
-  .content!=post.body
+extends layout
+block content
+  - each post in posts
+    .page-header
+      li
+        a(href="/post/#{post.id}")= post.title
+        .content!=post.body
 </PRE>
 
 <P>
