--- a/node99.html
+++ b/node99.html
@@ -811,7 +811,9 @@ block content
 </PRE>
 
 <UL>
-<LI>The <code>extends</code> keyword allows a template to extend a layout or parent template. It can then override certain pre-defined blocks of content.
+<LI>The <code>extends</code> keyword allows a template to extend a layout or parent template. 
+
+<FONT COLOR="#ff0000"> It can then override certain pre-defined blocks of content</FONT>.
 </LI>
 <LI>Now to extend the <code>layout</code>, we simply create 
 the <code>add_post.jade</code>
