--- a/node99.html
+++ b/node99.html
@@ -820,7 +820,15 @@ the <code>add_post.jade</code>
 file and use the <code>extends</code> directive, giving the path 
 (with or without the <code>.jade extension</code>). 
 </LI>
-<LI>We then define one or more blocks that will
+<LI>We then define  the block 
+<FONT COLOR="#ff0000"> content</FONT> using the 
+<code>block</code> declaration:
+<PRE>
+block content
+</PRE>
+</LI>
+<LI>In general, we can define
+one or more blocks that will
 override the parent block content
 </LI>
 <LI>Véase
