--- a/node99.html
+++ b/node99.html
@@ -859,6 +859,9 @@ element.
 
 <P>
 
+<img src="formcoffeepress.png" width="50%" />
+
+
 <H4><A NAME="SECTION062300140000000000000">
 Should display the add post page: (true) green</A>
 </H4>
