--- a/node99.html
+++ b/node99.html
@@ -799,11 +799,11 @@ block content
       .clearfix
         label(for="title") Title
         .input
-          input.xlarge#title(type="text", name="post[title]")
+          input.xlarge#title(type="text", name="title")
       .clearfix
         label(for="post") Post
         .input
-          textarea#post.xxlarge(name="post[body]",rows="3")
+          textarea#post.xxlarge(name="body",rows="3")
       .actions
         input.btn.primary(type="submit", value="Publish!")
         |   
@@ -861,6 +861,8 @@ element.
 
 <img src="formcoffeepress.png" width="50%" />
 
+
+<P>
 
 <H4><A NAME="SECTION062300140000000000000">
 Should display the add post page: (true) green</A>
