--- a/node99.html
+++ b/node99.html
@@ -859,6 +859,18 @@ element.
 
 <P>
 
+<UL>
+<LI>On the server side We can access to the data filled in the form 
+using <code>req.body</code>. It
+Contains key-value pairs of data submitted in the request body. 
+
+<P>
+By default, <code>req.body</code> is <code>undefined</code>, 
+and is populated when you use body-parsing middleware such as 
+<code>body-parser</code>.
+</LI>
+</UL>
+
 <img src="formcoffeepress.png" width="50%" />
 
 
