--- a/node99.html
+++ b/node99.html
@@ -27,19 +27,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2793"
+<A NAME="tex2html2794"
   HREF="node100.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2787"
+<A NAME="tex2html2788"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2783"
+<A NAME="tex2html2784"
   HREF="node98.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2789"
+<A NAME="tex2html2790"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2791"
+<A NAME="tex2html2792"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -79,18 +79,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2794"
+<B> Sig:</B> <A NAME="tex2html2795"
   HREF="node100.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2788"
+<B>Sup:</B> <A NAME="tex2html2789"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2784"
+<B> Ant:</B> <A NAME="tex2html2785"
   HREF="node98.html">Porting to Coffeescript</A>
 <B> Con:</B> 
-<A NAME="tex2html2789"
+<A NAME="tex2html2790"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2791"
+<A NAME="tex2html2792"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -102,38 +102,40 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2795"
-  HREF="node99.html#SECTION06230010000000000000">Mocha, Chai y Expect: instalando las dependencias</A>
 <LI><A NAME="tex2html2796"
-  HREF="node99.html#SECTION06230020000000000000">Una Prueba Sencilla</A>
+  HREF="node99.html#SECTION06230010000000000000">Mocha, Chai y Expect: instalando las dependencias</A>
 <LI><A NAME="tex2html2797"
-  HREF="node99.html#SECTION06230030000000000000">¿Cómo lo vamos a hacer?</A>
+  HREF="node99.html#SECTION06230020000000000000">Una Prueba Sencilla</A>
 <LI><A NAME="tex2html2798"
-  HREF="node99.html#SECTION06230040000000000000">Should display index with posts: red</A>
+  HREF="node99.html#SECTION06230030000000000000">¿Cómo lo vamos a hacer?</A>
 <LI><A NAME="tex2html2799"
-  HREF="node99.html#SECTION06230050000000000000">Should display index with posts: green</A>
+  HREF="node99.html#SECTION06230040000000000000">Should display index with posts: red</A>
 <LI><A NAME="tex2html2800"
-  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: red</A>
+  HREF="node99.html#SECTION06230050000000000000">Should display index with posts: green</A>
 <LI><A NAME="tex2html2801"
-  HREF="node99.html#SECTION06230070000000000000">Expect vars posts equal empty array: green</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: red</A>
 <LI><A NAME="tex2html2802"
-  HREF="node99.html#SECTION06230080000000000000">Should display the add post page: red</A>
+  HREF="node99.html#SECTION06230070000000000000">Expect vars posts equal empty array: green</A>
 <LI><A NAME="tex2html2803"
-  HREF="node99.html#SECTION06230090000000000000">Should display the add post page: (false) green</A>
+  HREF="node99.html#SECTION06230080000000000000">Should display the add post page: red</A>
 <LI><A NAME="tex2html2804"
-  HREF="node99.html#SECTION062300100000000000000">Mocha: done</A>
+  HREF="node99.html#SECTION06230090000000000000">Should display the add post page: (false) green</A>
 <LI><A NAME="tex2html2805"
-  HREF="node99.html#SECTION062300110000000000000">Escribiendo newPost</A>
+  HREF="node99.html#SECTION062300100000000000000">Mocha: done</A>
 <LI><A NAME="tex2html2806"
-  HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
+  HREF="node99.html#SECTION062300110000000000000">Escribiendo newPost</A>
 <LI><A NAME="tex2html2807"
-  HREF="node99.html#SECTION062300130000000000000">views/add_post.jade</A>
+  HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
 <LI><A NAME="tex2html2808"
-  HREF="node99.html#SECTION062300140000000000000">Should display the add post page: (true) green</A>
+  HREF="node99.html#SECTION062300130000000000000">views/add_post.jade</A>
 <LI><A NAME="tex2html2809"
-  HREF="node99.html#SECTION062300150000000000000">views/index.jade</A>
+  HREF="node99.html#SECTION062300140000000000000">Should display the add post page: (true) green</A>
 <LI><A NAME="tex2html2810"
+  HREF="node99.html#SECTION062300150000000000000">views/index.jade</A>
+<LI><A NAME="tex2html2811"
   HREF="node99.html#SECTION062300160000000000000">Gulpfile</A>
+<LI><A NAME="tex2html2812"
+  HREF="node99.html#SECTION062300170000000000000">Guardando el Post</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -973,20 +975,57 @@ ahora podemos ejecutar las pruebas con <code>gulp test</code>.
 
 <P>
 
+<H4><A NAME="SECTION062300170000000000000">
+Guardando el Post</A>
+</H4>
+  
+
+Now let’s add another route to handle the post. 
+For now, we’re just going to store each post in an array. 
+<PRE>
+[~/src/coffee/coffeepress(master)]$ cat routes/index.coffee 
+express = require('express')
+debug = require('debug')('coffeepress:server')
+
+posts = [ {id:0, title: "hi", body: "Hola todo el mundo"}, {id:1, title: "world", body: "I like &lt;b&gt;coffee&lt;/b&gt;"}] 
+
+module.exports = 
+  index: (req, res) -&gt;
+    debug "en index"
+    res.render 'index', 
+          title: 'My Coffee Blog' 
+          posts: posts
+
+  newPost: (req, res) -&gt;
+    debug "en newPost"
+    res.render 'add_post', title:"Write New Post"
+
+  addPost: (req, res) -&gt;
+    debug "en addPost"
+    debug req.body
+    post = req.body
+    # [post.title, post.body ] = [req.body.title, req.body.body]
+    post.id = posts.length
+    posts.push post
+    res.redirect "/"
+</PRE>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2793"
+<A NAME="tex2html2794"
   HREF="node100.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2787"
+<A NAME="tex2html2788"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2783"
+<A NAME="tex2html2784"
   HREF="node98.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2789"
+<A NAME="tex2html2790"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2791"
+<A NAME="tex2html2792"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1026,11 +1065,11 @@ ahora podemos ejecutar las pruebas con <code>gulp test</code>.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2794"
+<B> Sig:</B> <A NAME="tex2html2795"
   HREF="node100.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2788"
+<B>Sup:</B> <A NAME="tex2html2789"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2784"
+<B> Ant:</B> <A NAME="tex2html2785"
   HREF="node98.html">Porting to Coffeescript</A>
 </DIV>
 <!--End of Navigation Panel-->
