--- a/node96.html
+++ b/node96.html
@@ -179,6 +179,8 @@ James carr blog and updated 2015:
   HREF="node99.html#SECTION062300150000000000000">views/index.jade</A>
 <LI><A NAME="tex2html2744"
   HREF="node99.html#SECTION062300160000000000000">Gulpfile</A>
+<LI><A NAME="tex2html2745"
+  HREF="node99.html#SECTION062300170000000000000">Guardando el Post</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
