--- a/node96.html
+++ b/node96.html
@@ -181,6 +181,8 @@ James carr blog and updated 2015:
   HREF="node99.html#SECTION062300160000000000000">Gulpfile</A>
 <LI><A NAME="tex2html2745"
   HREF="node99.html#SECTION062300170000000000000">Guardando el Post</A>
+<LI><A NAME="tex2html2746"
+  HREF="node99.html#SECTION062300180000000000000">Viewing a Single Post</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
