--- a/node99.html
+++ b/node99.html
@@ -27,19 +27,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2794"
+<A NAME="tex2html2795"
   HREF="node100.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2788"
+<A NAME="tex2html2789"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2784"
+<A NAME="tex2html2785"
   HREF="node98.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2790"
+<A NAME="tex2html2791"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2792"
+<A NAME="tex2html2793"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -79,18 +79,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2795"
+<B> Sig:</B> <A NAME="tex2html2796"
   HREF="node100.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2789"
+<B>Sup:</B> <A NAME="tex2html2790"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2785"
+<B> Ant:</B> <A NAME="tex2html2786"
   HREF="node98.html">Porting to Coffeescript</A>
 <B> Con:</B> 
-<A NAME="tex2html2790"
+<A NAME="tex2html2791"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2792"
+<A NAME="tex2html2793"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -102,40 +102,42 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2796"
-  HREF="node99.html#SECTION06230010000000000000">Mocha, Chai y Expect: instalando las dependencias</A>
 <LI><A NAME="tex2html2797"
-  HREF="node99.html#SECTION06230020000000000000">Una Prueba Sencilla</A>
+  HREF="node99.html#SECTION06230010000000000000">Mocha, Chai y Expect: instalando las dependencias</A>
 <LI><A NAME="tex2html2798"
-  HREF="node99.html#SECTION06230030000000000000">¿Cómo lo vamos a hacer?</A>
+  HREF="node99.html#SECTION06230020000000000000">Una Prueba Sencilla</A>
 <LI><A NAME="tex2html2799"
-  HREF="node99.html#SECTION06230040000000000000">Should display index with posts: red</A>
+  HREF="node99.html#SECTION06230030000000000000">¿Cómo lo vamos a hacer?</A>
 <LI><A NAME="tex2html2800"
-  HREF="node99.html#SECTION06230050000000000000">Should display index with posts: green</A>
+  HREF="node99.html#SECTION06230040000000000000">Should display index with posts: red</A>
 <LI><A NAME="tex2html2801"
-  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: red</A>
+  HREF="node99.html#SECTION06230050000000000000">Should display index with posts: green</A>
 <LI><A NAME="tex2html2802"
-  HREF="node99.html#SECTION06230070000000000000">Expect vars posts equal empty array: green</A>
+  HREF="node99.html#SECTION06230060000000000000">Expect vars posts equal empty array: red</A>
 <LI><A NAME="tex2html2803"
-  HREF="node99.html#SECTION06230080000000000000">Should display the add post page: red</A>
+  HREF="node99.html#SECTION06230070000000000000">Expect vars posts equal empty array: green</A>
 <LI><A NAME="tex2html2804"
-  HREF="node99.html#SECTION06230090000000000000">Should display the add post page: (false) green</A>
+  HREF="node99.html#SECTION06230080000000000000">Should display the add post page: red</A>
 <LI><A NAME="tex2html2805"
-  HREF="node99.html#SECTION062300100000000000000">Mocha: done</A>
+  HREF="node99.html#SECTION06230090000000000000">Should display the add post page: (false) green</A>
 <LI><A NAME="tex2html2806"
-  HREF="node99.html#SECTION062300110000000000000">Escribiendo newPost</A>
+  HREF="node99.html#SECTION062300100000000000000">Mocha: done</A>
 <LI><A NAME="tex2html2807"
-  HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
+  HREF="node99.html#SECTION062300110000000000000">Escribiendo newPost</A>
 <LI><A NAME="tex2html2808"
-  HREF="node99.html#SECTION062300130000000000000">views/add_post.jade</A>
+  HREF="node99.html#SECTION062300120000000000000">views/layout.jade</A>
 <LI><A NAME="tex2html2809"
-  HREF="node99.html#SECTION062300140000000000000">Should display the add post page: (true) green</A>
+  HREF="node99.html#SECTION062300130000000000000">views/add_post.jade</A>
 <LI><A NAME="tex2html2810"
-  HREF="node99.html#SECTION062300150000000000000">views/index.jade</A>
+  HREF="node99.html#SECTION062300140000000000000">Should display the add post page: (true) green</A>
 <LI><A NAME="tex2html2811"
-  HREF="node99.html#SECTION062300160000000000000">Gulpfile</A>
+  HREF="node99.html#SECTION062300150000000000000">views/index.jade</A>
 <LI><A NAME="tex2html2812"
+  HREF="node99.html#SECTION062300160000000000000">Gulpfile</A>
+<LI><A NAME="tex2html2813"
   HREF="node99.html#SECTION062300170000000000000">Guardando el Post</A>
+<LI><A NAME="tex2html2814"
+  HREF="node99.html#SECTION062300180000000000000">Viewing a Single Post</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -1019,20 +1021,70 @@ app.post "/post/new", routes.addPost
 
 <P>
 
+<H4><A NAME="SECTION062300180000000000000">
+Viewing a Single Post</A>
+</H4>
+  
+
+<P>
+Añadimos un método <code>newPost</code> y lo montamos en <code>/post/:id</code>:
+<PRE>
+[~/src/coffee/coffeepress(master)]$ sed -ne '20,23p' app.coffee 
+app.get  "/"        , routes.index
+app.get  "/post/new", routes.newPost
+app.post "/post/new", routes.addPost
+app.get  "/post/:id", routes.viewPost
+</PRE>
+Este es el código del manejador de la ruta <code>/post/:id</code>:
+<PRE>
+[~/src/coffee/coffeepress(master)]$ cat routes/index.coffee 
+express = require('express')
+debug = require('debug')('coffeepress:server')
+
+#posts = []
+
+module.exports = 
+  index: (req, res) -&gt;
+    ...
+
+  newPost: (req, res) -&gt;
+    res.render 'add_post', title:"Write New Post"
+
+  addPost: (req, res) -&gt;
+    ...
+
+   viewPost: (req, res) -&gt;
+     post = posts[req.params.id]
+     res.render 'post', post: post, title: post.title, id: req.params.id
+</PRE>
+Y esta es la vista <code>views/post.jade</code>:
+<PRE>
+[~/src/coffee/coffeepress(master)]$ cat views/post.jade 
+extends layout
+block content
+  h1 Post #{ id }
+    .page-header
+      h1= post.title
+    .content!=post.body
+</PRE>
+Ahora cuando visitamos una ruta como <code>/post/2</code> nos mostrará el correspondiente post.
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2794"
+<A NAME="tex2html2795"
   HREF="node100.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2788"
+<A NAME="tex2html2789"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2784"
+<A NAME="tex2html2785"
   HREF="node98.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2790"
+<A NAME="tex2html2791"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2792"
+<A NAME="tex2html2793"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1072,11 +1124,11 @@ app.post "/post/new", routes.addPost
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2795"
+<B> Sig:</B> <A NAME="tex2html2796"
   HREF="node100.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2789"
+<B>Sup:</B> <A NAME="tex2html2790"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2785"
+<B> Ant:</B> <A NAME="tex2html2786"
   HREF="node98.html">Porting to Coffeescript</A>
 </DIV>
 <!--End of Navigation Panel-->
