--- a/node100.html
+++ b/node100.html
@@ -158,6 +158,14 @@ test    0.203125GB
 </PRE>
 
 <P>
+Switch to a new database named <code>example</code>, 
+with the following operation:
+<PRE>
+&gt; use example
+switched to db example
+</PRE>
+
+<P>
 
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2832"
