--- a/node99.html
+++ b/node99.html
@@ -653,7 +653,7 @@ Mocha: done</A>
   
 
 <P>
-How can we make absolutely sure it gets called during our test run? 
+How can we make absolutely sure the test gets called during our test run? 
 
 <UL>
 <LI>Mocha has a feature that allows for easy testing in these situations. 
